--- a/code.html
+++ b/code.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Hi All!</h1>
     <p>Hello Eva !</p>
+
     <script src="js/html.js"></script>
   </body>
 </html>
